--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<app-home></app-home>
+<div style="text-align: center;">
+  <h1>Welcome</h1>
+</div>
+
+<nav>
+  <a routerLink="/home" routerLinkActive="active"> Home</a>
+</nav>
 <router-outlet></router-outlet>
