--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
-<h1>This Is Home</h1>
-<a routerLink = '/details'>Details</a>
+<h1>This Home Component</h1>
 
+<a routerLink="/details" routerLinkActive="active"> Go To Details</a>
